system setting page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #7ba28b; }
+  background: #6a835a; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #19af89; }
+  background: #7682de; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9b2a76; }
+  background: #703ad4; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #8cbcd3; }
+  background: #2e9c1a; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #bd1deb; }
+  background: #3d26fc; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #f5c31d; }
+  background: #b170ac; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #58c4f1; }
+  background: #9733ee; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #28c9ca; }
+  background: #d53139; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #4252b7; }
+  background: #05e77a; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #1c0a53; }
+  background: #bf45c0; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #9b8f3b; }
+  background: #26ce87; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #a98e10; }
+  background: #275a6c; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #7687ec; }
+  background: #58bb42; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #ffbc28; }
+  background: #db0425; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #1c86fc; }
+  background: #73c859; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3180d2; }
+  background: #b20c5b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #a46f7c; }
+  background: #9bd859; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #884f63; }
+  background: #a2772e; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #aba750; }
+  background: #f4f267; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #972c6b; }
+  background: #85d11e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #af55ae; }
+  background: #3f4abd; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #e1c428; }
+  background: #ed03dc; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a41d91; }
+  background: #0cbe82; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #fcfcd2; }
+  background: #14e3e1; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #4a88ba; }
+  background: #699248; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #e8038e; }
+  background: #67fe02; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #f55ae4; }
+  background: #880cbd; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #afdee7; }
+  background: #ae8f48; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #343ddf; }
+  background: #e4f625; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #3f1739; }
+  background: #5e834e; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #7503b7; }
+  background: #22dcbd; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #4aadf2; }
+  background: #7c87a8; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #0ea8d4; }
+  background: #0ebba2; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #8d0c0d; }
+  background: #b93a2b; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #780994; }
+  background: #ee9119; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #25a52d; }
+  background: #4f46b5; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #e4d474; }
+  background: #f7504b; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #f0f513; }
+  background: #78c00a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #2e3a62; }
+  background: #57d802; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #899b70; }
+  background: #7b8f5a; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #d3caa7; }
+  background: #cec7e3; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #45948d; }
+  background: #13012b; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #b45b4b; }
+  background: #3d8c8a; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #fa53b5; }
+  background: #73d0ea; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #ef73fb; }
+  background: #7bd73f; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #1062a6; }
+  background: #9740f4; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #022703; }
+  background: #591a68; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #39f74d; }
+  background: #0df8af; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #1ff316; }
+  background: #6312db; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #751027; }
+  background: #246db5; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #49b0ec; }
+  background: #8cbe8d; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #b1e17c; }
+  background: #65292d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #193d35; }
+  background: #305546; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #3dd0dc; }
+  background: #7d7ab5; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #28d5c7; }
+  background: #3e60a0; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #78a18e; }
+  background: #87b3fb; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #45d426; }
+  background: #fb0f02; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #5c1bca; }
+  background: #613674; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #7079f2; }
+  background: #35fc0d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #ab9091; }
+  background: #41d38d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #60073b; }
+  background: #54622f; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #7cc52a; }
+  background: #d40a3a; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #284a6e; }
+  background: #16a682; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #d847df; }
+  background: #0cba30; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #fe3d23; }
+  background: #83ed5e; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #4e3e0a; }
+  background: #eead4a; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #472e02; }
+  background: #e73dc0; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #f74baa; }
+  background: #f5d45f; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #60c925; }
+  background: #40e56a; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #57b420; }
+  background: #4ae7df; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #495ee7; }
+  background: #aace25; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #6a2b65; }
+  background: #797c9d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #6f4425; }
+  background: #1a6821; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #17e4b7; }
+  background: #afc729; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #875e85; }
+  background: #392155; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #39572f; }
+  background: #94508f; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #53e41e; }
+  background: #28808f; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #b6ea35; }
+  background: #9781d9; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #7bdbbd; }
+  background: #ac3426; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #57974e; }
+  background: #0fd03b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #311af1; }
+  background: #2b33f1; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #bd569b; }
+  background: #2f183d; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b59855; }
+  background: #9bd7cc; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #40c17b; }
+  background: #2c850a; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #39d1ac; }
+  background: #10174b; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #5b47bf; }
+  background: #84cfcf; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #79a28c; }
+  background: #3bca01; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #4f030c; }
+  background: #5da059; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #69c8a8; }
+  background: #f70b36; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #b87fce; }
+  background: #4d40bf; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #140671; }
+  background: #2953b4; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #9713bf; }
+  background: #eeaf9e; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #9743a2; }
+  background: #c15644; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #753927; }
+  background: #9d7590; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #80c03a; }
+  background: #526d5a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #b911bd; }
+  background: #a82262; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b4f57a; }
+  background: #c468c1; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #85ab6b; }
+  background: #53758a; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #024382; }
+  background: #cbb25f; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b63e94; }
+  background: #32d51b; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14938,6 +14938,31 @@ option {
   font-size: 16px;
   font-weight: 600;
   color: #4c4c4c; }
+
+.system-settings-wrapper .sliding-left-section .device-filterleft-bar {
+  margin-top: 0px; }
+.system-settings-wrapper .sliding-left-section .nav-pills .nav-link {
+  margin: 0px !important; }
+
+.system-settings-content-wrapper {
+  padding: 40px 50px;
+  height: calc(100% - 160px); }
+  .system-settings-content-wrapper .tab-title {
+    font-size: 24px;
+    color: #4c4c4c;
+    margin-bottom: 20px; }
+
+.field-section .d-flex div {
+  width: 100% !important; }
+  .field-section .d-flex div:nth-child(1) {
+    margin-right: 15px; }
+  .field-section .d-flex div:nth-child(4) {
+    margin-left: 15px;
+    margin-top: 32px;
+    flex: 1;
+    flex-basis: 300px; }
+  .field-section .d-flex div:nth-child(2) {
+    margin-right: 15px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
