--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8737,205 +8737,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #6a835a; }
+  background: #4f34bf; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #7682de; }
+  background: #2a3582; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #703ad4; }
+  background: #ef240d; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #2e9c1a; }
+  background: #fdbb4f; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #3d26fc; }
+  background: #92f4bf; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #b170ac; }
+  background: #3873a2; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #9733ee; }
+  background: #1f6398; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #d53139; }
+  background: #f7820f; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #05e77a; }
+  background: #7a3857; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #bf45c0; }
+  background: #15dfde; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #26ce87; }
+  background: #112212; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #275a6c; }
+  background: #e7c3f7; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #58bb42; }
+  background: #75f0d8; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #db0425; }
+  background: #e1cb5d; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #73c859; }
+  background: #ea178b; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #b20c5b; }
+  background: #6bff9d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #9bd859; }
+  background: #4740af; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #a2772e; }
+  background: #fc83f7; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #f4f267; }
+  background: #9b3080; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #85d11e; }
+  background: #c0d153; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #3f4abd; }
+  background: #602059; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #ed03dc; }
+  background: #ce3694; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #0cbe82; }
+  background: #a07bd4; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #14e3e1; }
+  background: #afac59; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #699248; }
+  background: #8d5522; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #67fe02; }
+  background: #dac94a; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #880cbd; }
+  background: #cccce6; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #ae8f48; }
+  background: #de19af; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e4f625; }
+  background: #3df207; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #5e834e; }
+  background: #9af31e; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #22dcbd; }
+  background: #e6c2cd; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #7c87a8; }
+  background: #b51f4f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #0ebba2; }
+  background: #0757cb; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #b93a2b; }
+  background: #2f598c; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #ee9119; }
+  background: #29ec20; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #4f46b5; }
+  background: #aa83dd; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #f7504b; }
+  background: #d0baa0; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #78c00a; }
+  background: #e09dce; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #57d802; }
+  background: #2fb087; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #7b8f5a; }
+  background: #903b4c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #cec7e3; }
+  background: #bcbe14; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #13012b; }
+  background: #8518b5; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #3d8c8a; }
+  background: #52e9f4; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #73d0ea; }
+  background: #d104a1; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #7bd73f; }
+  background: #083187; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #9740f4; }
+  background: #893ef6; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #591a68; }
+  background: #5e0c7e; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #0df8af; }
+  background: #e507f6; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #6312db; }
+  background: #f59ada; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #246db5; }
+  background: #326632; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8cbe8d; }
+  background: #066704; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #65292d; }
+  background: #47b65d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #305546; }
+  background: #86c768; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #7d7ab5; }
+  background: #cf958f; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #3e60a0; }
+  background: #2699f4; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #87b3fb; }
+  background: #2a5d10; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #fb0f02; }
+  background: #939811; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #613674; }
+  background: #20f01c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #35fc0d; }
+  background: #67f541; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #41d38d; }
+  background: #74949e; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #54622f; }
+  background: #89e577; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #d40a3a; }
+  background: #377661; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #16a682; }
+  background: #3e73cb; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #0cba30; }
+  background: #fd3fdb; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #83ed5e; }
+  background: #1f8d25; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #eead4a; }
+  background: #5cb217; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #e73dc0; }
+  background: #f8a223; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #f5d45f; }
+  background: #5c85dd; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #40e56a; }
+  background: #2303c6; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #4ae7df; }
+  background: #1aa04c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #aace25; }
+  background: #87a389; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #797c9d; }
+  background: #63e2dd; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #1a6821; }
+  background: #3f1397; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #afc729; }
+  background: #9ffb04; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #392155; }
+  background: #10c0cd; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #94508f; }
+  background: #1f15bd; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #28808f; }
+  background: #2a5ca1; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #9781d9; }
+  background: #29b25c; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #ac3426; }
+  background: #7482c6; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0fd03b; }
+  background: #f150e5; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #2b33f1; }
+  background: #dd44aa; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #2f183d; }
+  background: #dbcfc5; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #9bd7cc; }
+  background: #90675a; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #2c850a; }
+  background: #6ebe53; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #10174b; }
+  background: #45b40d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #84cfcf; }
+  background: #330231; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #3bca01; }
+  background: #150d3c; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5da059; }
+  background: #0c65dd; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f70b36; }
+  background: #6ec127; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #4d40bf; }
+  background: #291b48; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2953b4; }
+  background: #ff62b0; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #eeaf9e; }
+  background: #845d17; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c15644; }
+  background: #74c58f; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #9d7590; }
+  background: #66c3a0; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #526d5a; }
+  background: #db181c; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #a82262; }
+  background: #8f8020; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c468c1; }
+  background: #ec118b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #53758a; }
+  background: #d220a7; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #cbb25f; }
+  background: #7df4b9; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #32d51b; }
+  background: #a8c584; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14943,6 +14943,12 @@ option {
   margin-top: 0px; }
 .system-settings-wrapper .sliding-left-section .nav-pills .nav-link {
   margin: 0px !important; }
+.system-settings-wrapper .field-section {
+  padding: 20px 0px; }
+.system-settings-wrapper .d-flex {
+  flex-direction: column; }
+.system-settings-wrapper .tabs-aggre button {
+  margin: 6px 0px; }
 
 .system-settings-content-wrapper {
   padding: 40px 50px;
@@ -14965,6 +14971,21 @@ option {
     margin-right: 15px; }
 
 @media screen and (max-width: 767px) {
+  .system-settings-wrapper .inner-tab-content-right-col {
+    padding: 20px 12px 30px; }
+  .system-settings-wrapper .static-routes-div {
+    padding-left: 15px;
+    padding-right: 15px; }
+    .system-settings-wrapper .static-routes-div .form-group:nth-child(2) label {
+      display: none; }
+    .system-settings-wrapper .static-routes-div .form-group::nth-child(3) label {
+      display: none; }
+  .system-settings-wrapper .field-section .d-flex div:nth-child(4) {
+    margin-top: 10px;
+    margin-left: 0px;
+    flex-basis: auto;
+    text-align: center; }
+
   .profile-box {
     padding: 10px; }
 
