--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -1,5 +1,38 @@
 // Responsive css
 @media screen and (max-width: 767px) {
+    // new css start here
+    .system-settings-wrapper {
+        .inner-tab-content-right-col {
+          padding: 20px 12px 30px;
+        }
+        .static-routes-div {
+            padding-left: 15px;
+            padding-right: 15px;
+            .form-group:nth-child(2) {
+                 label{
+                    display: none;
+                }
+               
+            }
+            .form-group::nth-child(3) label {
+                display: none;
+            }
+        }
+        .field-section {
+
+            .d-flex {
+                div:nth-child(4) {
+                    margin-top: 10px; 
+                    margin-left: 0px;
+                    flex-basis: auto;
+                    text-align: center;
+                    
+                } 
+            }  
+        }
+    }
+    //new css end here
+
     .profile-box {
         padding: 10px;
     }
